@@ -268,6 +268,7 @@ these bits, just add new ones on the end, in order to remain compatible. */
 #define PCRE_EXTRA_MATCH_LIMIT_RECURSION  0x0010
 #define PCRE_EXTRA_MARK                   0x0020
 #define PCRE_EXTRA_EXECUTABLE_JIT         0x0040
+#define PCRE_EXTRA_USED_JIT               0x0080
 
 /* Types */
 
