@@ -32,6 +32,12 @@ Version 8.31
         
     (e) When newline was set to CRLF, the metacharacter "." did not recognize
         a partial match for a CR character at the end of the subject string.
+        
+6.  When matching is performed using JIT-compiled code, the flag bit 
+    PCRE_EXTRA_USED_JIT is set in the pcre_extra block and can be tested by the 
+    caller. This bit is checked by pcretest if JIT is requested by /S++ or -s++ 
+    (instead of just /S+ or -s+) and the text "(JIT)" added to the output if 
+    the bit is set.   
 
 
 Version 8.30 04-February-2012
